Text aligned and redimensioned window fixed

--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -59,6 +59,7 @@ html {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .photo-container {
@@ -68,6 +69,7 @@ html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 1vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .sensors-grid {
@@ -79,11 +81,12 @@ html {
   margin-left: 2vw;
   margin-top: 2vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .sensor-container {
   width: calc(100% - 2vw);
-  height: calc(98% - 2vh);
+  height: calc(98.5% - 2vh);
   margin-top: 1vh;
   background-color: white;
   border-radius: 8px;
@@ -94,6 +97,7 @@ html {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  overflow: hidden;
 }
 
 .sensor-title {
@@ -117,6 +121,15 @@ html {
   margin-left: 2vw
 }
 
+.sensor-data-wrapper {
+  flex: 1;
+  width: 100%;
+  margin-top: 4vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .photo-inner-container {
   display: flex;
   flex-direction: column;
@@ -136,6 +149,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .photo-box-top {
